--- a/index.html
+++ b/index.html
@@ -2,42 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="utf8" />
-    <title>your project name</title>
-
+    <title>Dunder Mifflin Crypto Inc.</title>
+    <link rel="icon" type="image/x-icon" href="./public/logo.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="./public/style.css" rel="stylesheet" />
-    <script type="module" src="./src/data.js"></script>
+    
   </head>
 
   <body>
     <!-- Put your HTML here -->
     <header>
-      <nav>
+      <nav id="navbar">
         <img src="./public/logo.svg" alt="logo" id="logo">
+        <div id="navbar-coins">
+
+        </div>
       </nav>
     </header>
     <div id="user-interface">
       <div id="global-info">
 
       </div>
+      <hr>
       <table>
         <thead>
           <tr>
-            <th>Name</th>
-            <th>Symbol</th>
             <th>BTC Rank</th>
+            <th>Symbol</th>
+            <th>Name</th>
             <th>Price</th>
+            <th>ATH Price</th>
             <th>Market Cap</th>
             <th>Volume 24h</th>
-            <th>Change 30m</th>
-            <th>Change 1h</th>
+            <th>Change 15m</th>
             <th>Change 6h</th>
             <th>Change 12h</th>
             <th>Change 24h</th>
             <th>Change 7d</th>
             <th>Change 30d</th>
-            <th>Change 1y</th>
-            <th>ATH Price</th>
-            <th>ATH Price Percentage</th>
+            <th>Last Update</th>
+            <th>7d Chart</th>
           </tr>
         </thead>
         <tbody id="coins">
