--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </nav>
     </header>
     <div id="user-interface">
+      <h1>Global CryptoCurrency Market Info</h1>
       <div id="global-info">
 
       </div>
@@ -45,7 +46,7 @@
           </tr>
         </thead>
         <tbody id="coins">
-        </tbody>`;
+        </tbody>
       </table>
     </div>
 
