mobile responsivity is done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   </head>
 
   <body>
-    <!-- Put your HTML here -->
     <header>
       <nav id="navbar">
         <img src="./public/logo.svg" alt="logo" id="logo">
@@ -21,6 +20,7 @@
     </header>
     <div id="user-interface">
       <h1>Global CryptoCurrency Market Info</h1>
+      <br>
       <div id="global-info">
 
       </div>
@@ -28,21 +28,21 @@
       <table>
         <thead>
           <tr>
-            <th>BTC Rank</th>
+            <th class="disappear-xsm">BTC Rank</th>
             <th>Symbol</th>
-            <th>Name</th>
+            <th class="disappear-mobile">Name</th>
             <th>Price</th>
-            <th>ATH Price</th>
-            <th>Market Cap</th>
-            <th>Volume 24h</th>
+            <th class="disappear-sm">ATH Price</th>
+            <th class="disappear-mid">Market Cap</th>
+            <th class="disappear-mid">Volume 24h</th>
             <th>Change 15m</th>
-            <th>Change 6h</th>
-            <th>Change 12h</th>
+            <th class="disappear-xsm">Change 6h</th>
+            <th class="disappear-mobile">Change 12h</th>
             <th>Change 24h</th>
-            <th>Change 7d</th>
-            <th>Change 30d</th>
-            <th>Last Update</th>
-            <th>7d Chart</th>
+            <th class="disappear-mobile">Change 7d</th>
+            <th class="disappear-mid">Change 30d</th>
+            <th class="disappear-mid">Last Update</th>
+            <th class="disappear-sm">7d Chart</th>
           </tr>
         </thead>
         <tbody id="coins">
@@ -50,8 +50,6 @@
       </table>
     </div>
 
-    <!-- your data -->
-    <script type="module" src="src/app.js"></script>
-    
+    <script type="module" src="src/app.js"></script>   
   </body>
 </html>
